# job-finder

./: .env.example  .gitignore  CODE_QUALITY_IMPROVEMENTS.md  DATABASE_SCHEMA.md  IMPLEMENTATION_SUMMARY.md  README.md  __init__.py  india_company_sites.json  india_company_sites_sample3.json  main.py  multi_site_jobs.xlsx  multi_site_scraper.py  pyproject.toml  requirements.txt  site_filter_profiles.json  wipro_site.json
db/: supabase_sync.py
scrapers/: amazon.py  base.py  generic.py  linkedin.py  pg.py
tests/: test_experience.py  test_job_utils.py  test_keywords.py  test_salary_workmode.py  test_sites_loader.py
utils/: experience.py  filters.py  job_utils.py  keywords.py  retry.py  salary.py  sites_loader.py  work_mode.py
